--- a/test/fixtures/books.yml
+++ b/test/fixtures/books.yml
@@ -3,11 +3,11 @@
 one:
   title: MyString
   author: MyString
-  page: 
+  page: 1
   description: MyText
 
 two:
   title: MyString
   author: MyString
-  page: 
+  page: 1
   description: MyText
